Host/Source/LibOpenBLT/port/windows/canif/kvaser/canlib.h


/** Handle to an opened circuit, created with \ref canOpenChannel(). */
typedef int canHandle;

/**
 * \ingroup can_general
 *
 * \source_cs       <b>static void canInitializeLibrary();</b>
 *
 * \source_delphi   <b>procedure canInitializeLibrary;    </b>
 * \source_end
 * This function must be called before any other functions is used.  It will
 * initialize the driver.
 *
 * You may call \ref canInitializeLibrary() more than once. The actual
 * initialization will take place only once.
 *
 * Any errors encountered during library initialization will be "silent" and an
 * appropriate \ref canERR_xxx error code will be returned later on when
 * \ref canOpenChannel() (or any other API call that requires initialization) is
 * called.
 *
 * \sa \ref page_user_guide_init
 *
 */
void CANLIBAPI canInitializeLibrary(void);
 /** @} */

/** Used in \ref canIOCTL_SET_USER_IOPORT and \ref canIOCTL_GET_USER_IOPORT. */
typedef struct {
    unsigned int portNo;     ///< Port number used in e.g. \ref canIOCTL_SET_USER_IOPORT
    unsigned int portValue;  ///< Port value used in e.g. \ref canIOCTL_SET_USER_IOPORT
} canUserIoPortData;



/**
 * \ingroup can_general
 *
 * \source_cs       <b>static Canlib.canStatus canUnloadLibrary();</b>
 *
 * \source_delphi   <b>function canUnloadLibrary: Integer;     </b>
 * \source_end
 *
 * Use this function if you are loading canlib32.dll dynamically (that is,
 * using the Win32 API \c LoadLibrary) and need to unload it using the Win32
 * API \c FreeLibrary. \ref canUnloadLibrary() will free allocated memory, unload
 * the DLLs canlib32.dll has loaded and de-initialize data structures. You must
 * call \ref canInitializeLibrary() again to use the API functions in canlib32.dll.
 *
 * Calling \ref canUnloadLibrary() makes any open \ref CanHandle invalid. The proper
 * procedure for using \ref canUnloadLibrary() is:
 *
 *   -# Close all active handles using \ref canBusOff() and \ref canClose().
 *   -# At this point all handles earlier returned by \ref canOpenChannel() should be freed.
 *   -# Call \ref canUnloadLibrary().
 *   -# Call \ref canInitializeLibrary().
 *   -# You can now setup your handles to Kvaser devices from scratch
 *      (ie. \ref canOpenChannel(), \ref canSetBusParams(), \ref canBusOn(), etc).
 *
 * \return \ref canOK (zero) if success
 * \return \ref canERR_xxx (negative) if failure
 *
 * \sa \ref canInitializeLibrary()
 */
canStatus CANLIBAPI canUnloadLibrary(void);


  /**
   * This struct is returned by \ref canGetBusStatistics()
   *
   * The values are cleared when the corresponding channel goes on bus.
   */
typedef struct canBusStatistics_s {
    unsigned long stdData;   ///< Number of received standard (11-bit identifiers) data frames.
    unsigned long stdRemote; ///< Number of received standard (11-bit identifiers) remote frames.
    unsigned long extData;   ///< Number of received extended (29-bit identifiers) data frames.
    unsigned long extRemote; ///< Number of received extended (29-bit identifiers) remote frames.
    unsigned long errFrame;  ///< Number of error frames

    /**
     * The bus load, expressed as an integer in the interval 0 - 10000
     * representing 0.00% - 100.00% bus load.
     */
    unsigned long busLoad;
    unsigned long overruns;  ///< The number of overruns detected by the hardware, firmware or driver.
} canBusStatistics;


/** Used for time domain handling. */
typedef void *kvTimeDomain;


/** Contains status codes according to \ref canSTAT_xxx. */
typedef canStatus kvStatus;


/**
 *
 * Used for time domain handling.
 */
typedef struct kvTimeDomainData_s {
    int nMagiSyncGroups;       ///< number of MagiSync&tm; groups
    int nMagiSyncedMembers;    ///< number of MagiSync&tm; members
    int nNonMagiSyncCards;     ///< number of non MagiSync&tm; interfaces
    int nNonMagiSyncedMembers; ///< number of non MagiSync&tm; members
} kvTimeDomainData;


/**
 * \ref kvCallback_t is used by the function \ref kvSetNotifyCallback()
 *
 * The callback function, on Windows required to be a \c __stdcall function, should be called with the following arguments:
 *
 * \li hnd - the handle of the CAN channel where the event happened.
 * \li context - the context pointer you passed to \ref kvSetNotifyCallback().
 * \li notifyEvent - one of the \ref canNOTIFY_xxx notification codes.
 *
 * \note It is really the \ref canNOTIFY_xxx codes, and not the
 *  \ref canEVENT_xxx codes that the \ref canSetNotify() API is using.
 *
 * \note The default calling convention for C/C++ programs on Windows is \c __cdecl.
 * <br>On Linux, the default calling convention is used.
 *
 * \sa \ref section_user_guide_send_recv_asynch_callback
 */
typedef void(__stdcall *kvCallback_t)(CanHandle hnd, void *context, unsigned int notifyEvent);
 /** @} */

  /**
   *
   * A handle to a t-script envvar.
   * Returned by the function \ref kvScriptEnvvarOpen().
   */

typedef __int64 kvEnvHandle;